# tufaceous

./: Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
.github/buildomat/: ci-env.sh  config.toml
.github/buildomat/jobs/: build-and-test-helios.sh  clippy.sh
.github/workflows/: ci.yml
artifact/: Cargo.toml
artifact/output/: artifact_version_schema.json
artifact/src/: artifact.rs  hash.rs  hubris.rs  installinator.rs  kind.rs  lib.rs  map.rs  metadata.rs  rkth.rs  set.rs  sign.rs  tags.rs  version.rs
brand-metadata/: Cargo.toml
brand-metadata/src/: lib.rs
lib/: Cargo.toml
lib/src/: archive.rs  artifact.rs  check.rs  error.rs  key.rs  lib.rs  loader.rs  mpsc_stream.rs  repo.rs  repository.rs  root.rs  schema.rs  target.rs  util.rs  utils.rs  zip_transport.rs  zip_writer.rs
lib/src/artifact/: composite.rs
lib/src/assemble/: build.rs  deployment_unit.rs  manifest.rs  mod.rs
lib/src/edit/: editor.rs  fake.rs  guess.rs  hubris_archive.rs  input.rs  key.rs  measurement_corpus.rs  mod.rs  os_images.rs  root.rs  sign.rs  source.rs  zone_image.rs
lib/src/repo/: check.rs  v1.rs
lib/tests/: check.rs  tests.rs  v1_compatibility.rs
lib/tests/data/: corim-all-sp-v1.0.55.cbor
