[workspace]
resolver = "2"
members = [
    "artifact",
    "bin",
    "brand-metadata",
    "lib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[workspace.dependencies]
anyhow = "1.0.96"
assert_cmd = "2.0.16"
async-trait = "0.1.86"
aws-lc-rs = "1.12.4"
base64 = "0.22.1"
buf-list = "1.0.3"
bytes = "1.10.0"
camino = { version = "1.1.9", features = ["serde1"] }
camino-tempfile = "1.1.1"
chrono = { version = "0.4.40", default-features = false, features = ["std"] }
clap = { version = "4.5.31", features = ["cargo", "derive", "env", "wrap_help"] }
console = { version = "0.15.10", default-features = false }
daft = { version = "0.1.1", features = ["derive"] }
datatest-stable = "0.2.9"
debug-ignore = "1.0.5"
dropshot = "0.15.1"
expectorate = "1.1.0"
flate2 = "1.0.35"
fs-err = "2.11.0"
futures = "0.3.31"
hex = "0.4.3"
hubtools = { git = "https://github.com/oxidecomputer/hubtools.git", branch = "main" }
humantime = "2.1.0"
itertools = "0.13.0"
parse-display = "0.10.0"
parse-size = "1.1.0"
predicates = "3.1.3"
proptest = "1.5.0"
rand = "0.8.5"
regex = "1.11.1"
schemars = { version = "0.8.21", features = ["semver"] }
semver = { version = "1.0.25", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_human_bytes = { git = "https://github.com/oxidecomputer/serde_human_bytes", branch = "main" }
serde_json = "1.0.139"
serde_path_to_error = "0.1.16"
sha2 = "0.10.8"
slog = "2.7.0"
slog-async = "2.8.0"
slog-envlogger = "2.2.0"
slog-term = "2.9.1"
strum = { version = "0.26.3", features = ["derive"] }
tar = "0.4.44"
tempfile = "3.13.0"
test-strategy = "0.4.0"
thiserror = "2.0.12"
tokio = "1.43.0"
toml = "0.8.20"
tough = { version = "0.20.0", features = [ "http" ] }
tufaceous-artifact = { path = "artifact", default-features = false }
tufaceous-brand-metadata = { path = "brand-metadata" }
tufaceous-lib = { path = "lib" }
url = "2.5.3"
# NOTE: Avoid upgrading zip until https://github.com/zip-rs/zip2/issues/231 is resolved
zip = { version = "=2.1.3", default-features = false }

[workspace.lints.clippy]
