[workspace]
resolver = "2"
members = [
    "artifact",
    "bin",
    "brand-metadata",
    "lib",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[workspace.dependencies]
anyhow = "1.0.96"
assert_cmd = "2.0.16"
atomicwrites = "0.4.4"
aws-lc-rs = "1.12.4"
bytes = "1.11.1"
camino = "1.1.9"
camino-tempfile = "1.1.1"
chrono = { version = "0.4.40", default-features = false, features = ["std"] }
ciborium = "0.2.2"
clap = { version = "4.5.31", features = ["cargo", "derive", "wrap_help"] }
daft = { version = "0.1.1", features = ["derive"] }
expectorate = "1.1.0"
flate2 = "1.0.35"
futures-util = "0.3.31"
hex = "0.4.3"
hubtools = { git = "https://github.com/oxidecomputer/hubtools.git", branch = "main" }
memchr = "2.7.4"
proptest = "1.5.0"
rats-corim = { git = "https://github.com/oxidecomputer/rats-corim.git", branch = "main" }
rawzip = "0.4.2"
regex = "1.11.1"
schemars = "0.8.21"
semver = { version = "1.0.25", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_human_bytes = { git = "https://github.com/oxidecomputer/serde_human_bytes.git", branch = "main" }
serde_json = "1.0.139"
sha2 = "0.10.8"
slog = "2.7.0"
slog-async = "2.8.0"
slog-envlogger = "2.2.0"
slog-term = "2.9.2"
tar = "0.4.44"
test-strategy = "0.4.0"
thiserror = "2.0.12"
tokio = "1.47.0"
tokio-test = "0.4.5"
tokio-util = "0.7.15"
# https://github.com/awslabs/tough/pull/917
tough = { git = "https://github.com/iliana/tough.git", branch = "transport-is-sync" }
tufaceous.path = "lib"
tufaceous-artifact.path = "artifact"
tufaceous-brand-metadata.path = "brand-metadata"
url = "2.5.4"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
must-use-candidate = "allow"

[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.rawzip]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
