[package]
name = "tufaceous-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-lc-rs.workspace = true
base64.workspace = true
buf-list.workspace = true
bytes.workspace = true
camino.workspace = true
camino-tempfile.workspace = true
chrono.workspace = true
debug-ignore.workspace = true
flate2.workspace = true
fs-err.workspace = true
futures.workspace = true
hex.workspace = true
hubtools.workspace = true
itertools.workspace = true
parse-size.workspace = true
rand.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
sha2.workspace = true
slog.workspace = true
tar.workspace = true
tokio.workspace = true
toml.workspace = true
tough.workspace = true
tufaceous-artifact.workspace = true
tufaceous-brand-metadata.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
dropshot.workspace = true
tokio = { workspace = true, features = ["macros", "test-util"] }

[lints]
workspace = true
