[package]
name = "tufaceous"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
atomicwrites.workspace = true
aws-lc-rs.workspace = true
bytes.workspace = true
camino.workspace = true
camino-tempfile.workspace = true
chrono.workspace = true
ciborium.workspace = true
flate2.workspace = true
futures-util.workspace = true
hex.workspace = true
hubtools.workspace = true
rats-corim.workspace = true
rawzip.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
slog.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tough.workspace = true
tufaceous-artifact = { workspace = true, features = ["hubtools"] }
tufaceous-brand-metadata.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
tokio-test.workspace = true

[lints]
workspace = true
